@@ -50,16 +50,16 @@
      * This caching assumes that the value returned by [-isFlipped] will
      * not change during the views lifetime - if it does, the view must
      * be sure to change the flag accordingly.
-     * 'opaque_view' is similar.
      */
     unsigned	flipped_view:1;
-    unsigned	has_subviews:1;		/* This view has subviews	*/
-    unsigned	has_currects:1;		/* This view has cursor rects	*/
-    unsigned	has_trkrects:1;		/* This view has tracking rects	*/
-    unsigned	has_draginfo:1;		/* View/window has drag types	*/
-    unsigned	opaque_view:1;
-    unsigned	valid_rects:1;		/* Some cursor rects are valid	*/
-    unsigned	needs_display:1;	/* window/view needs display	*/
+    unsigned	has_subviews:1;		/* The view has subviews.	*/
+    unsigned	has_currects:1;		/* The view has cursor rects.	*/
+    unsigned	has_trkrects:1;		/* The view has tracking rects.	*/
+    unsigned	has_draginfo:1;		/* View/window has drag types.	*/
+    unsigned	opaque_view:1;		/* For views whose opacity may	*/
+					/* change to keep track of it.	*/
+    unsigned	valid_rects:1;		/* Some cursor rects may be ok.	*/
+    unsigned	needs_display:1;	/* Window/view needs display.	*/
   } _rFlags;
 }
 
