@@ -1023,7 +1023,6 @@ void __dummy_GMAppKit_functionForLinking() {}
 
 #ifdef GNU_GUI_LIBRARY
   _rFlags.flipped_view = [self isFlipped];
-  _rFlags.opaque_view = [self isOpaque];
   if ([sub_views count])
     _rFlags.has_subviews = 1;
 #endif
